--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,14 @@ CHANNEL_SLUG_channel_pln = "channel-pln"
 # LLM used inside the custom action (can reuse the same key)
 OPENAI_MODEL = 'gpt-4o'
 OPENAI_TEMPERATURE=0
+
+# where your chat_bot lives
+API_BASE_URL=http://localhost:8000   # where your llm, buillder backend chat_bot lives
+
+# Neo4j
+NEO4J_URI=neo4j+s://dvd.databases.neo4j.io
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your_password
+NEO4J_DATABASE=neo4j   # optional, if you use a named DB
+KG_MODEL=openai_gpt_4o
+KG_MODE=graph_vector_fulltext
